<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/seed">

    <TextView
        android:id="@+id/textViewJuego"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/juego"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
        android:textSize="18sp"
        tools:text="Juego de ejemplo"
        android:textColor="@color/white"
       />

    <TextView
        android:id="@+id/textViewGenero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Genero"
        app:layout_constraintTop_toBottomOf="@id/textViewJuego"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
        tools:text="Género de ejemplo"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textViewEstudio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Estudio"
        app:layout_constraintTop_toBottomOf="@id/textViewGenero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
        tools:text="Estudio de ejemplo"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textViewNota"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Nota"
        app:layout_constraintTop_toBottomOf="@id/textViewEstudio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
        tools:text="10"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/ivJuego"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewNota"
        android:background="@color/black"/>
</androidx.constraintlayout.widget.ConstraintLayout>
