<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:background="@color/seed">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:text="@string/app_name"
            android:textSize="44sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:textColor="@color/md_theme_dark_secondary"
            style="@style/AppTheme"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:src="@drawable/logo"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:id="@+id/ivComenzar"
            style="@style/AppTheme"/>

        <TextView
            android:id="@+id/tvUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="30dp"
            android:text="@string/User"
            android:textColor="@color/md_theme_dark_onSurfaceVariant"
            android:textColorHint="@color/md_theme_light_surfaceVariant" />

        <Button
            android:id="@+id/btnCredits"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:text="@string/Credit"
            android:onClick="goToCreditActivity"
            android:layout_gravity="bottom"
            android:textColor="@color/md_theme_dark_tertiary"
            style="@style/AppTheme"/>

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Salir"
            android:onClick="goToLoginFragment"
            android:textColor="@color/md_theme_dark_tertiary"
            style="@style/AppTheme"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

