<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/seed">

    <ImageView
        android:id="@+id/ivJuego"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/black"/>

    <Button
        android:id="@+id/btnFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Favoritos"
        app:layout_constraintStart_toStartOf="@+id/ivJuego"
        app:layout_constraintTop_toBottomOf="@+id/ivJuego"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/juego"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvJuegoName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivJuego"
        app:layout_constraintTop_toTopOf="@id/ivJuego"
        app:layout_constraintVertical_chainStyle="packed"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/tvJuegoName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/tv1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivJuego"
        app:layout_constraintTop_toBottomOf="@id/tv2"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Xenoblade"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/tv1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Genero"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvGenero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivJuego"
        app:layout_constraintTop_toBottomOf="@id/tvJuegoName"
        app:layout_constraintVertical_chainStyle="packed"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/tvGenero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/tv3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivJuego"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        tools:text="JRPG"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/tv3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Estudio"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvEstudio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivJuego"
        app:layout_constraintTop_toBottomOf="@id/tvGenero"
        app:layout_constraintVertical_chainStyle="packed"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/tvEstudio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/ivJuego"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/ivJuego"
        app:layout_constraintTop_toBottomOf="@id/tv3"
        tools:text="Monolith"
        android:textColor="@color/white"/>


</androidx.constraintlayout.widget.ConstraintLayout>